--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
-elFinder.NetCore.Web/wwwroot/Files/
+#elFinder.NetCore.Web/wwwroot/Files/
 elFinder.NetCore.Web/wwwroot/lib/
 
 # MSTest test Results
